<resources>
    <string name="app_name">SSOM</string>
    <string name="project_number">189266416861</string>

    <string name="title_section1">내 정보</string>
    <string name="title_section2">아이템 상점</string>
    <string name="title_section3">약관 및 동의</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- setting -->
    <string name="action_settings">Settings</string>

    <!-- pull to refresh view -->
    <string name="release_to_refresh" formatted="false">Release to refresh</string>
    <string name="settings_loading" formatted="false">Loading&#8230;</string>

    <!-- filter -->
    <string name="filter_title">골라보기</string>
    <string name="filter_age_n_count">%1$s, %2$s</string>
    <string name="filter_select_all"><u>모두선택</u></string>
    <string name="filter_what_do_you_like">어떤 프로필을 보고 싶어요?</string>
    <string name="filter_how_old_do_you_like">몇 살이 좋아?</string>
    <string name="filter_how_many_do_you_like">몇 명이 좋아?</string>
    <string name="filter_ssom">쏨</string>
    <string name="filter_ssoa">쏴</string>
    <string name="filter_age_20_early">20대 초</string>
    <string name="filter_age_20_middle">20대 중</string>
    <string name="filter_age_20_late">20대 후</string>
    <string name="filter_age_30_all">30대</string>
    <string name="filter_people_1">1명</string>
    <string name="filter_people_2">2명</string>
    <string name="filter_people_3">3명</string>
    <string name="filter_people_4_n_over">4명 이상</string>
    <string name="filter_cannot_remove_all">모두 제외할 수 없습니다.</string>
    <string name="filter_btn_cancel">취소</string>
    <string name="filter_btn_apply">적용하기</string>
    <string name="filter_apply_complete">쏨 탐색기가 적용 되었습니다 =)</string>

    <!-- write post -->
    <string name="write_age_20_early">20대 초반 이</string>
    <string name="write_age_20_middle">20대 중반 이</string>
    <string name="write_age_20_late">20대 후반 이</string>
    <string name="write_age_30_all">30대&#160;</string>
    <string name="write_select_our_age">우리 나이는 %1$s에요</string>
    <string name="write_select_our_people">%1$s이 기다리고 있어요</string>
    <string name="write_one_letter">한마디</string>
    <string name="write_content_hint_ssom">오늘은 내가 쏜다!\n쏘고 싶은 메뉴와 센스 있는 멘트를\n적어보세요. 좋은 쏨을 만날 확률이\n훨씬 높아 집니다. : )</string>
    <string name="write_content_hint_ssoa">한턱 쏠 사람을 찾아보세요!\n사진, 멘트에 매력이 넘칠수록\n멋진 쏨을 만날 확률이 높아집니다!</string>
    <string name="write_information">프라이버시를 위해 등록한 글은 아침 9시에 자동으로 삭제돼요!</string>
    <string name="write_apply">등록하기</string>

    <!-- post list menu -->
    <string name="title_tab_give">내가 쏨</string>
    <string name="title_tab_take">니가 쏴</string>

    <!-- post list item -->
    <string name="post_title">%1$s %2$d명 있어요</string>

    <!-- detail view -->
    <string name="detail_cancel">닫기</string>
    <string name="detail_apply">쏨 타기</string>
    <string name="detail_see_chatting">채팅 보기</string>
    <string name="detail_age_people">%1$s, %2$d명 이에요</string>
    <string name="detail_distance">나와의 거리 %1$s</string>
    <string name="detail_category_ssom">내가 쏠게요!</string>
    <string name="detail_category_ssoa">쏘실 분 찾아요!</string>
    <string name="detail_my_post_delete">정말 삭제하시겠어요?</string>

    <!-- chatting -->
    <string name="chat_list_title_empty">Chat list</string>
    <string name="chat_list_title">Chat list (%1$d)</string>
    <string name="chat_room_title">Chat&#160;</string>
    <string name="chat_list_delete">쏨 끝내기</string>
    <string name="chat_guide_start">대화 시작!</string>
    <string name="chat_room_info_text_sent">상대방에게 만남을 신청했어요!</string>
    <string name="chat_room_info_text_received">상대방이 만남을 신청했어요!</string>
    <string name="chat_room_info_text_success">쏨과의 만남이 시작되었어요!</string>
    <string name="chat_room_info_btn_sent">요청취소</string>
    <string name="chat_room_info_btn_received">요청보기</string>
    <string name="chat_room_info_btn_success">위치보기</string>
    <string name="chat_message_initial_first">두근두근,&#160;</string>
    <string name="chat_message_initial_second">대화가 시작 되었쏨 :)</string>
    <string name="chat_message_request_received">만남 요청을 받았습니다!</string>
    <string name="chat_message_request_sent">만남 요청을 보냈습니다!</string>
    <string name="chat_message_cancel_first">요청이 취소 되었습니다&#8230;</string>
    <string name="chat_message_cancel_second">다른 인연을 찾아보세요&#8230;</string>
    <string name="chat_message_approve">만남이 시작되었습니다.</string>
    <string name="chat_message_complete">만남이 종료되었습니다.</string>
    <string name="chat_message_finish">상대방이 쏨을 종료했습니다. (T_T)</string>
    <string name="chat_message_hint">메시지를 입력하세요&#8230;</string>
    <string name="chat_room_no_info">정보가 없어요&#8230;</string>
    <string name="chat_ssom_map"><u>쏨 위치 보기</u></string>

    <!--list empty-->
    <string name="empty_chat_list">진행 중인 대화가 없어요&#8230;</string>
    <string name="empty_ssom_list">아직 등록된 글이 없어요.\n당신이 먼저 쏨/쏴를 올려보세요!</string>

    <!-- button -->
    <string name="ok_upper">확인</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>

    <!-- error message -->
    <string name="an_unexpected_error_occur">예상하지 못한 에러가 발생했습니다.</string>
    <string name="cannot_upload_over_10m">10Mb 이상의 파일을 업로드 할 수 없습니다.</string>

    <!-- toast message -->
    <string name="notice">공지</string>
    <string name="error_occurred">실패하였습니다. 다시 시도해주세요.</string>
    <string name="write_content_max_lines">최대 4줄까지만 입력 가능합니다.</string>
    <string name="cannot_write_with_empty_content">한마디를 작성해 주세요.</string>
    <string name="cannot_write_with_unknown_location">위치정보를 가지고올수 없어 글을 작성할수 없습니다.</string>
    <string name="cannot_write_with_empty_picture">사진을 등록해 주세요.</string>
    <string name="password_should_be_over_n_letters">비밀번호는 %d자 이상이어야 합니다.</string>
    <string name="invalid_password_format">비밀번호에 사용이 불가능한 문자가 포함되어 있습니다.</string>
    <string name="invalid_email_format">사용이 불가능한 이메일 주소입니다.</string>
    <string name="login_failed">로그인에 실패하였습니다. 다시 로그인 하시겠어요?</string>
    <string name="request_to_admin">문제가 계속될 시 ssomcompany@gmail.com 으로 문의바랍니다.</string>
    <string name="success_registration">회원가입을 완료했습니다.</string>
    <string name="ssom_progress_message">다른 만남 중이어서 쏨타기를 할 수 없어요.</string>

    <!-- dialog message -->
    <string name="dialog_notice">알림</string>
    <string name="dialog_meet_request">만남요청</string>
    <string name="dialog_meet_apply">만남수락</string>
    <string name="dialog_meet_cancel">만남취소</string>
    <string name="dialog_meet_finish">만남종료</string>
    <string name="dialog_meet">만나요</string>
    <string name="dialog_sorry">미안해요</string>
    <string name="dialog_not_now">아직은 좀&#8230;</string>
    <string name="dialog_okay">확인</string>
    <string name="dialog_move">이동하기</string>
    <string name="dialog_close">닫기</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_delete">삭제하기</string>
    <string name="dialog_finish">끝내기</string>
    <string name="dialog_require_login">로그인이 필요한 서비스입니다.\n로그인 하시겠어요?</string>
    <string name="dialog_write_delete_message">쏨 등록이 완료되지 않았어요.\n작성했던 내용을 삭제 하시겠어요?</string>
    <string name="dialog_meet_request_message">현재 대화상대에게\n만남을 요청 하시겠어요?</string>
    <string name="dialog_meet_request_cancel_message">요청 취소 시 상대에게 알림이 가요.\n 요청을 취소 하시겠어요?</string>
    <string name="dialog_meet_received_message">상대방이 만남을 요청했습니다!\n수락 하시겠어요?</string>
    <string name="dialog_meet_cancel_message">만남을 정말 취소 하시겠어요?\n취소 시 채팅방으로 돌아갑니다.</string>
    <string name="dialog_meet_finish_message">만남을 종료 하시겠어요?</string>
    <string name="dialog_meet_finish_by_exit_message">채팅방을 나가면 만남이 종료됩니다.\n종료 하시겠어요?</string>
    <string name="dialog_chat_list_delete_message">끝낸 쏨은 되돌릴 수 없어요&#8230;\n쏨을 정말로 끝내시겠어요?</string>
    <string name="dialog_logout_message">로그아웃 하시겠어요?</string>
    <string name="dialog_explain_location_permission_message">위치에 접근할 권한이 없습니다. \n위치권한이 없는경우 정확한 위치서비스를 제공할 수 없습니다.\n\n[앱]->[권한]에서 위치 권한을 허용해주세요.</string>
    <string name="dialog_explain_storage_permission_message">저장소에 접근할 권한이 없습니다. \n저장소 권한이 없는경우 게시물을 등록할 수 없습니다.\n\n[앱]->[권한]에서 저장소 권한을 허용해주세요.</string>
    <string name="dialog_withdraw_message">쏨 서비스에 가입된 메일로\n탈퇴신청 메일을 보내주세요.\nssomcompany@gmail.com</string>

    <!-- toggle bar -->
    <string name="map">MAP</string>
    <string name="list">LIST</string>

    <!-- left menu -->
    <string name="noti_setting">알림 설정</string>
    <string name="ssom_homepage">쏨 홈페이지</string>
    <string name="make_heart">하트 만들기</string>
    <string name="private_information">개인 정보 처리 방침</string>
    <string name="use_policy">이용 약관</string>
    <string name="question">문의 하기</string>
    <string name="withdraw">회원 탈퇴</string>

    <!--heart store-->
    <string name="store_title">하트 만들기</string>
    <string name="heart_current_count">현재 하트는 %d개 입니다.</string>
    <string name="heart_not_enough_go_to_store">하트가 부족해 쏨타기를 진행할 수 없어요.. \n상점으로 이동하시겠어요?</string>
    <string name="heart_will_be_deleted_if_app_deleted">어플리케이션 삭제 시 모든 하트는 초기화 되니 주의하세요.</string>

    <!-- today profile -->
    <string name="today_photo">오늘의 사진</string>
    <string name="today_load_image">앨범 불러오기</string>
    <string name="today_take_picture">바로 촬영하기</string>
    <string name="today_delete_image">사진 삭제하기</string>
    <string name="today_photo_will_be_delete_in_the_morning">\'오늘의 사진\'은 여러분의 프라이버시 보호를 위해<![CDATA[<br>]]>매일 아침 9시에 <![CDATA[<b><font color=#ed344b>자동 삭제</b>]]> 됩니다.</string>

    <!-- login , logout -->
    <string name="login_reg_top_logo">쏨을 가입하고 새로운 만남을 시작해보세요 =)</string>
    <string name="login_reg_password_confirm">비밀번호 확인</string>
    <string name="login_reg_email_already_exist">이미 사용중인 이메일 주소입니다.</string>
    <string name="login_reg_password_not_match">입력한 비밀 번호가 다릅니다.</string>
    <string name="login_reg_email_hint">이메일 주소를 입력 해주세요.</string>
    <string name="login_reg_password_hint">비밀 번호를 입력 해주세요.</string>
    <string name="login_reg_password_confirm_hint">비밀 번호를 다시 한번 입력 해주세요.</string>
    <string name="login_register">가입하기</string>
    <string name="login_email">이메일</string>
    <string name="login_email_confirm"><u>이메일 인증</u></string>
    <string name="login_password">비밀번호</string>
    <string name="login_find_password">비밀번호 찾기</string>
    <string name="login_top_logo">서비스 이용을 위해서는 로그인이 필요합니다.</string>
    <string name="login">로그인</string>
    <string name="login_retry">다시시도</string>
    <string name="login_required"><u>로그인 후 이용할 수 있습니다.</u></string>
    <string name="login_needed"><u>로그인</u></string>
    <string name="logout"><u>로그아웃</u></string>

    <!-- version 관리 -->
    <string name="update">업데이트</string>
    <string name="finish">종료하기</string>
    <string name="version_update_needed">새로운 업데이트가 있습니다.\n업데이트 후 이용하실 수 있습니다 =)</string>

    <!--user count-->
    <string name="current_user_count">현재 %d명 접속 중</string>

    <!-- app 종료 -->
    <string name="app_finish">정말 종료하실 거에요? (T.T)</string>
</resources>
