<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="#CC000000"
    tools:context=".fragment.FilterFragment" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="19dp"
        android:layout_marginLeft="21dp"
        android:background="@drawable/bg_filter"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="33dp"
            android:orientation="horizontal">

            <TextView
                style="@style/ssom_font_16_main_black_bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/filter_ssom_title"/>
            
            <TextView
                android:id="@+id/btn_select_all"
                style="@style/ssom_font_16_red_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_select_all"/>
        </LinearLayout>

        <!-- 나이 선택 영역 -->
        <TextView
            style="@style/ssom_font_12_gray_warm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="20dp"
            android:text="@string/filter_how_old_do_you_like"/>

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_filter_age_20_early"
                style="@style/ssom_font_12_gray_warm_bold"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:textIsSelectable="false"
                android:gravity="center"
                android:background="@drawable/filter_option_selector"
                android:textColor="@drawable/filter_option_color_selector"
                android:text="@string/filter_age_20_early" />

            <TextView
                android:id="@+id/tv_filter_age_20_middle"
                style="@style/ssom_font_12_gray_warm_bold"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:textIsSelectable="false"
                android:gravity="center"
                android:background="@drawable/filter_option_selector"
                android:textColor="@drawable/filter_option_color_selector"
                android:text="@string/filter_age_20_middle" />

            <TextView
                android:id="@+id/tv_filter_age_20_late"
                style="@style/ssom_font_12_gray_warm_bold"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:textIsSelectable="false"
                android:gravity="center"
                android:background="@drawable/filter_option_selector"
                android:textColor="@drawable/filter_option_color_selector"
                android:text="@string/filter_age_20_late" />

            <TextView
                android:id="@+id/tv_filter_age_30_all"
                style="@style/ssom_font_12_gray_warm_bold"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:textIsSelectable="false"
                android:gravity="center"
                android:background="@drawable/filter_option_selector"
                android:textColor="@drawable/filter_option_color_selector"
                android:text="@string/filter_age_30_all" />
        </LinearLayout>

        <!-- 사람 선택 영역 -->
        <TextView
            style="@style/ssom_font_12_gray_warm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="20dp"
            android:text="@string/filter_how_many_do_you_like"/>

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_filter_people_1"
                style="@style/ssom_font_12_gray_warm_bold"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:textIsSelectable="false"
                android:gravity="center"
                android:background="@drawable/filter_option_selector"
                android:textColor="@drawable/filter_option_color_selector"
                android:text="@string/filter_people_1" />

            <TextView
                android:id="@+id/tv_filter_people_2"
                style="@style/ssom_font_12_gray_warm_bold"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:textIsSelectable="false"
                android:gravity="center"
                android:background="@drawable/filter_option_selector"
                android:textColor="@drawable/filter_option_color_selector"
                android:text="@string/filter_people_2" />

            <TextView
                android:id="@+id/tv_filter_people_3"
                style="@style/ssom_font_12_gray_warm_bold"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:textIsSelectable="false"
                android:gravity="center"
                android:background="@drawable/filter_option_selector"
                android:textColor="@drawable/filter_option_color_selector"
                android:text="@string/filter_people_3" />

            <TextView
                android:id="@+id/tv_filter_people_4_n_over"
                style="@style/ssom_font_12_gray_warm_bold"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:textIsSelectable="false"
                android:gravity="center"
                android:background="@drawable/filter_option_selector"
                android:textColor="@drawable/filter_option_color_selector"
                android:text="@string/filter_people_4_n_over" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="29dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_filter_cancel"
                style="@style/ssom_font_14_pinkish_gray_two_selector"
                android:gravity="center"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:text="@string/filter_btn_cancel"/>

            <TextView
                android:id="@+id/tv_filter_apply"
                style="@style/ssom_font_14_main_black"
                android:gravity="center"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:text="@string/filter_btn_apply"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/icon_circle"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="19dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/icon_filter_on"/>

</RelativeLayout>
