<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/red_pink">

        <FrameLayout
            android:id="@+id/btn_close"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:padding="15dp"
            android:layout_centerVertical="true">

            <View android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_close_white"/>
        </FrameLayout>

        <TextView
            style="@style/ssom_font_16_white_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/today_photo"/>
    </RelativeLayout>
    
    <FrameLayout
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="26dp">
        
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/drawer_bg_today_photo"/>

        <View
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/img_today_empty"/>

        <com.ssomcompany.ssomclient.widget.CircularNetworkImageView
            android:id="@+id/profile_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_gravity="center"/>
    </FrameLayout>

    <TextView
        android:id="@+id/explanation_profile"
        style="@style/ssom_font_12_gray_warm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="13dp"
        android:background="@color/custom_e5e5e5"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="7dp"
        android:background="@color/custom_e5e5e5"/>

    <TextView
        android:id="@+id/btn_load_image"
        style="@style/ssom_font_16_custom_555555"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="5dp"
        android:text="@string/today_load_image"/>

    <TextView
        android:id="@+id/btn_take_picture"
        style="@style/ssom_font_16_custom_555555"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:padding="5dp"
        android:text="@string/today_take_picture"/>

    <TextView
        android:id="@+id/btn_delete_image"
        style="@style/ssom_font_16_red_pink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:padding="5dp"
        android:text="@string/today_delete_image"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            style="@style/ssom_font_16_white_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:gravity="center"
            android:background="@drawable/btn_write_cancel"
            android:text="@string/cancel"/>
        
        <TextView
            android:id="@+id/btn_save"
            style="@style/ssom_font_16_white_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/btn_write_apply_ssoa"
            android:text="@string/save"/>
    </LinearLayout>

</LinearLayout>